...
            style="@style/myCalc.portraitOperatorsButton"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/keyboard_operator_pow"
            app:icon="@drawable/ic_operator_pow"
            app:iconSize="40dp"
            app:layout_constraintBottom_toTopOf="@+id/button_n8"
            app:layout_constraintEnd_toStartOf="@+id/button_ac"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_polarity"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
...
            style="@style/myCalc.portraitNumbersButton"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/keyboard_number_seven"
            app:icon="@drawable/ic_number_button_n7"
            app:layout_constraintBottom_toTopOf="@+id/button_n4"
            app:layout_constraintEnd_toStartOf="@+id/button_n8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_polarity" />

        <com.google.android.material.button.MaterialButton
...
            style="@style/myCalc.portraitNumbersButton"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/keyboard_number_one"
            app:icon="@drawable/ic_number_button_n1"
            app:layout_constraintBottom_toTopOf="@+id/button_dot"
            app:layout_constraintEnd_toStartOf="@+id/button_n2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_n4" />

        <com.google.android.material.button.MaterialButton
...
