...
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:menu="@menu/main_top_bar"/>
            </com.google.android.material.appbar.AppBarLayout>

            <TextView
                android:id="@+id/text_first_operand"
                style="@style/myCalc.portraitOperationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:contentDescription="@string/display_first_operand"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/scientific_container_opened_overlay"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_open_close_scientific_container"
                    style="@style/myCalc.portraitScientificNavButton"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/scientific_keyboard_open"
                    app:icon="@drawable/ic_nav_scientific_keyboard_arrow_open"
                    app:layout_constraintBottom_toBottomOf="parent"
...
